syntax = "proto3";

option csharp_namespace = "WorkerService";

package WorkerService;

service Worker {
  rpc Factorial (FactorialRequest) returns (FactorialReply);
}

message FactorialRequest {
  int32 factor = 1;
}

message FactorialReply {
  int64 result = 1;
}
